...
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/profile_margin_vertical">

            <TextView
                android:id="@+id/profile_informations_textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prénom"
                android:textColor="#000"
                android:textSize="25sp"
                android:layout_marginHorizontal="@dimen/profile_margin_horizontal_about"
...
